# CustomDNS

./: CMakeLists.txt  Dockerfile  README.md
include/: dns_server.h
src/: dns_server.cpp  main.cpp
